--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     const team1Board = {};
     const team2Board = {};
 
-    const allChallenges = [
+    const allActions = [
         "Fais un défilé de mode exagéré en utilisant un objet de la pièce comme accessoire principal.",
         "Imite ton animal préféré pendant 30 secondes.",
         "Raconte une blague en utilisant uniquement des bruits d'animaux.",
@@ -229,10 +229,6 @@
         "Invente et démontre un nouveau pas de danse ridicule.",
         "Fais un discours de remerciement comme si tu venais de gagner un Oscar pour le rôle le plus improbable.",
         "Imite trois célébrités différentes en moins d'une minute.",
-        // Ajoutez ici les défis supplémentaires
-    ];
-
-    const allQuestions = [
         "Quelle est la chose la plus embarrassante que tu aies faite en public ?",
         "Si tu pouvais échanger ta vie avec quelqu'un dans cette pièce pendant une journée, qui choisirais-tu et pourquoi ?",
         "Quel est ton plus grand regret ?",
@@ -243,37 +239,54 @@
         "Si tu pouvais effacer un souvenir de ta mémoire, lequel serait-ce ?",
         "Quelle est la chose la plus chère que tu aies volée ou que tu aurais voulu voler ?",
         "Si tu devais être enfermé dans un magasin pour une nuit, lequel choisirais-tu ?",
-        // Ajoutez ici les questions supplémentaires
+        // Ajoutez ici toutes les autres actions et questions
     ];
+
+    let availableActions = [...allActions];
+
+    function shuffleArray(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+            const j = Math.floor(Math.random() * (i + 1));
+            [array[i], array[j]] = [array[j], array[i]];
+        }
+    }
+
+    function getUniqueAction() {
+        if (availableActions.length === 0) {
+            availableActions = [...allActions];
+            shuffleArray(availableActions);
+        }
+        return availableActions.pop();
+    }
 
     function initializeBoards() {
         const allCases = letters.flatMap(letter => 
             numbers.map(number => `${letter}${number}`)
         );
 
-        const shuffledCases = allCases.sort(() => Math.random() - 0.5);
+        shuffleArray(allCases);
 
-        for (let i = 0; i < shuffledCases.length; i++) {
-            const currentCase = shuffledCases[i];
+        for (let i = 0; i < allCases.length; i++) {
+            const currentCase = allCases[i];
             
             // Équipe 1
             if (i < 15) {
                 team1Board[currentCase] = "vide";
             } else {
-                team1Board[currentCase] = Math.random() < 0.5 ? getRandomChallenge() : getRandomQuestion();
+                team1Board[currentCase] = getUniqueAction();
             }
 
             // Équipe 2
             if (i < 15) {
                 team2Board[currentCase] = "vide";
             } else {
-                team2Board[currentCase] = Math.random() < 0.5 ? getRandomChallenge() : getRandomQuestion();
+                team2Board[currentCase] = getUniqueAction();
             }
         }
 
         // Mélanger à nouveau les cases pour l'équipe 2
         const team2Cases = Object.keys(team2Board);
-        team2Cases.sort(() => Math.random() - 0.5);
+        shuffleArray(team2Cases);
         const team2EmptyCases = team2Cases.slice(0, 15);
         const team2ActionCases = team2Cases.slice(15);
 
@@ -284,14 +297,6 @@
                 team2Board[c] = team2Board[team2ActionCases[i - 15]];
             }
         });
-    }
-
-    function getRandomChallenge() {
-        return allChallenges[Math.floor(Math.random() * allChallenges.length)];
-    }
-
-    function getRandomQuestion() {
-        return allQuestions[Math.floor(Math.random() * allQuestions.length)];
     }
 
     function startGeneration() {
@@ -413,7 +418,7 @@
 
     window.onload = function() {
         initializeBoards();
-        availableCases = Object.keys(team1Board); // ou team2Board, ils ont les mêmes clés
+        availableCases = Object.keys(team1Board);
         updateRemaining();
         moveGhost();
         setInterval(checkGhostVisibility, 1000);
