--- a/index.html
+++ b/index.html
@@ -125,37 +125,50 @@
         .hidden {
             display: none;
         }
-        .grim-reaper-container {
-            position: relative;
-            width: 300px;
-            height: 300px;
-            cursor: pointer;
-            background: none;
-            padding: 0;
-        }
-        #grim-reaper {
-            width: 100%;
-            height: 100%;
-            animation: float 3s ease-in-out infinite;
-            transition: transform 0.3s ease, filter 0.3s ease;
-        }
-        .grim-reaper-container:hover #grim-reaper {
-            transform: scale(1.05);
-            filter: brightness(1.2) contrast(1.2);
-        }
-        .grim-reaper-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #ff6600;
-            font-size: 24px;
-            text-align: center;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-            pointer-events: none;
-        }
+ .grim-reaper-container {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        cursor: pointer;
+        background: none;
+        padding: 0;
+        transition: transform 0.3s ease;
+    }
+
+    #grim-reaper {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        transition: filter 0.3s ease;
+    }
+
+    .grim-reaper-text {
+        position: absolute;
+        bottom: -40px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #ff6600;
+        font-size: 24px;
+        text-align: center;
+        opacity: 0;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+        pointer-events: none;
+        width: 100%;
+    }
+
+    .grim-reaper-container:hover {
+        transform: scale(1.05);
+    }
+
+    .grim-reaper-container:hover #grim-reaper {
+        filter: brightness(1.2) contrast(1.2) drop-shadow(0 0 10px #ff6600);
+    }
+
+    .grim-reaper-container:hover .grim-reaper-text {
+        opacity: 1;
+        transform: translateX(-50%) translateY(-10px);
+    }
         .grim-reaper-container:hover .grim-reaper-text {
             opacity: 1;
         }
@@ -193,10 +206,10 @@
                     <button onclick="revealChallenge(1)" class="reveal-button" id="revealButton1">Découvrir</button>
                 </div>
             </div>
-            <div class="grim-reaper-container" onclick="startGeneration()">
-                <img id="grim-reaper" src="https://i.postimg.cc/NF27T4tk/Pngtree-horror-grim-reaper-halloween-theme-5471050.png" alt="Grim Reaper">
-                <div class="grim-reaper-text">Invoquer une case</div>
-            </div>
+<div class="grim-reaper-container" onclick="startGeneration()">
+    <img id="grim-reaper" src="https://image.noelshack.com/fichiers/2024/42/3/1729102697-2o67-trz2-230518-removebg-preview.png" alt="Grim Reaper">
+    <div class="grim-reaper-text">Invoquer une case</div>
+</div>
             <div class="team" id="challenge2">
                 <h3>Équipe 2</h3>
                 <p class="hidden"></p>
