--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://cdn.midjourney.com/e565ccde-30a4-4902-925a-f9b1e37121f3/0_3.png');
+            background-image: url('https://cdn.midjourney.com/4091e970-9564-400d-b2d2-250c248f45cf/0_0.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -125,53 +125,51 @@
         .hidden {
             display: none;
         }
- .grim-reaper-container {
-        position: relative;
-        width: 300px;
-        height: 300px;
-        cursor: pointer;
-        background: none;
-        padding: 0;
-        transition: transform 0.3s ease;
-    }
+.grim-reaper-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    cursor: pointer;
+    background: none;
+    padding: 0;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
-    #grim-reaper {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        transition: filter 0.3s ease;
-    }
+#grim-reaper {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    transition: filter 0.3s ease, transform 0.3s ease;
+}
 
-    .grim-reaper-text {
-        position: absolute;
-        bottom: -40px;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #ff6600;
-        font-size: 24px;
-        text-align: center;
-        opacity: 0;
-        transition: opacity 0.3s ease, transform 0.3s ease;
-        text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-        pointer-events: none;
-        width: 100%;
-    }
+.grim-reaper-text {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #ff6600;
+    font-size: 24px;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+    pointer-events: none;
+    width: 100%;
+}
 
-    .grim-reaper-container:hover {
-        transform: scale(1.05);
-    }
+.grim-reaper-container:hover #grim-reaper {
+    transform: scale(1.05);
+    filter: brightness(1.2) contrast(1.2);
+}
 
-    .grim-reaper-container:hover #grim-reaper {
-        filter: brightness(1.2) contrast(1.2) drop-shadow(0 0 10px #ff6600);
-    }
-
-    .grim-reaper-container:hover .grim-reaper-text {
-        opacity: 1;
-        transform: translateX(-50%) translateY(-10px);
-    }
-        .grim-reaper-container:hover .grim-reaper-text {
-            opacity: 1;
-        }
+.grim-reaper-container:hover .grim-reaper-text {
+    opacity: 1;
+    transform: translateX(-50%) translateY(-10px);
+}
         .potion-checkbox {
             display: none;
         }
